# test-fastapi-firestore

./: README.md
backend/: TODO.md  pyproject.toml
backend/src/: database.py  dependencies.py  main.py  session.py
backend/src/comments/: models.py  router.py
backend/src/languages/: models.py  router.py
backend/src/notifications/: models.py  router.py
backend/src/snippets/: models.py  router.py
backend/src/tags/: models.py  router.py
backend/src/users/: models.py  router.py
frontend/: package-lock.json  package.json
frontend/src/: snippets.ts
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  snippet.service.ts  user.service.ts
frontend/src/app/auth/: auth.guard.ts  auth.service.ts
frontend/src/app/login/: login.component.html  login.component.ts
frontend/src/app/services/: auth.service.ts  interceptor.service.ts  snippet.service.ts
frontend/src/app/snippets-list/: snippets-list.component.html  snippets-list.component.spec.ts  snippets-list.component.ts
