[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["solano_b <solano_b@etna-alternance.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.97.0"}
firebase-admin = "^6.1.0"
google-auth = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
